--- a/.env
+++ b/.env
@@ -29,10 +29,10 @@ REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
-MAIL_PORT=465
+MAIL_PORT=587
 MAIL_USERNAME=ngoproject.fpt2021@gmail.com
-MAIL_PASSWORD=Fptaptech2021
-MAIL_ENCRYPTION=ssl
+MAIL_PASSWORD=zuiupjzoonpxawqf
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=ngoproject.fpt2021@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
