--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:TnkImDWHky1/ZWL0FXeMvN3U3AtLxQa1AiBbliy2HH4=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=https://charityngoproject.herokuapp.com/
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
